--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -1,5 +1,5 @@
-{% set title = 'Главная' %} {% extends 'layouts/_main.html' %} {% block content
-%}
+{% set title = 'Главная страница' %} {% extends 'layouts/_main.html' %} {% block
+content %}
 <!--================================================= hero ===========================================-->
 <div class="hero">
     <div class="container">
