--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -48,11 +48,11 @@ content %}
             <div class="how__work__item">
                 <div
                     class="how__work__item__icon"
-                    style="background-image: url(../img/how__work__icon-1.svg);"
+                    style="background-image: url(img/how__work__icon-1.svg);"
                 ></div>
                 <div
                     class="how__work__item__img"
-                    style="background-image: url(../img/how__work-1.png);"
+                    style="background-image: url(img/how__work-1.png);"
                 ></div>
                 <div class="how__work__item__text">
                     <div class="how__work__item__title">Общайтесь</div>
@@ -69,11 +69,11 @@ content %}
             <div class="how__work__item">
                 <div
                     class="how__work__item__icon"
-                    style="background-image: url(../img/how__work__icon-2.svg);"
+                    style="background-image: url(img/how__work__icon-2.svg);"
                 ></div>
                 <div
                     class="how__work__item__img"
-                    style="background-image: url(../img/how__work-2.png);"
+                    style="background-image: url(img/how__work-2.png);"
                 ></div>
                 <div class="how__work__item__text">
                     <div class="how__work__item__title">Получайте</div>
@@ -89,11 +89,11 @@ content %}
             <div class="how__work__item">
                 <div
                     class="how__work__item__icon"
-                    style="background-image: url(../img/how__work__icon-3.svg);"
+                    style="background-image: url(img/how__work__icon-3.svg);"
                 ></div>
                 <div
                     class="how__work__item__img"
-                    style="background-image: url(../img/how__work-3.png);"
+                    style="background-image: url(img/how__work-3.png);"
                 ></div>
                 <div class="how__work__item__text">
                     <div class="how__work__item__title">Зарабатывайте</div>
@@ -112,11 +112,11 @@ content %}
             <div class="how__work__item full">
                 <div
                     class="how__work__item__icon"
-                    style="background-image: url(../img/how__work__icon-4.svg);"
+                    style="background-image: url(img/how__work__icon-4.svg);"
                 ></div>
                 <div
                     class="how__work__item__img"
-                    style="background-image: url(../img/how__work-4.png);"
+                    style="background-image: url(img/how__work-4.png);"
                 ></div>
                 <div class="how__work__item__text">
                     <div class="how__work__item__title">Делайте мир лучше!</div>
