--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -1,5 +1,5 @@
-{% set title = 'Главная страница' %} {% extends 'layouts/_main.html' %} {% block
-content %}
+{% set title = 'Главная страница 2' %} {% extends 'layouts/_main.html' %} {%
+block content %}
 <!--================================================= hero ===========================================-->
 <div class="hero">
     <div class="container">
@@ -321,21 +321,122 @@ content %}
     <!-- idols__slide -->
 </div>
 <!--=================================================END idols ===========================================-->
-<!--================================================= separator ===========================================-->
-<div class="separator violet"></div>
-<!--=================================================END separator ===========================================-->
+
 <!--================================================= faq ===========================================-->
 <div class="faq">
+    <!--================================================= separator ===========================================-->
+    <div class="separator violet"></div>
+    <!--=================================================END separator ===========================================-->
     <div class="container">
         <div class="sec__title white">Часто задаваемые вопросы</div>
         <div class="faq__tabs">
             <!-- faq__tab -->
             <div class="faq__tab">
-                <div class="faq__tab__head">
+                <div data-tab-link="1" class="faq__tab__head">
                     <div class="faq__tab__title">
                         Какая основная цель приложения Twidy?
                     </div>
-                    <div class="faq__tab__arrow"></div>
+                    <div data-tab-arrow="1" class="faq__tab__arrow"></div>
+                </div>
+                <div data-tab-content="1" class="faq__tab__content">
+                    <p>
+                        Чтобы определить размер выплаты каждому пользователю, мы
+                        разработали так называемый Социальный рейтинг. Это
+                        индикатор, который отражает уровень влияния в социальных
+                        сетях на базе ряда параметров: число «живых»
+                        подписчиков, количество лайков и комментариев и качество
+                        контента. Вы увидите стоимость своего поста
+                        непосредственно перед участием в кампании, и получите
+                        оплату через 24 часа после публикации.
+                    </p>
+                </div>
+            </div>
+            <!--END faq__tab -->
+            <!-- faq__tab -->
+            <div class="faq__tab">
+                <div data-tab-link="2" class="faq__tab__head">
+                    <div class="faq__tab__title">
+                        Какие методы выплат вы поддерживаете?
+                    </div>
+                    <div data-tab-arrow="2" class="faq__tab__arrow"></div>
+                </div>
+                <div data-tab-content="2" class="faq__tab__content">
+                    <p>
+                        Чтобы определить размер выплаты каждому пользователю, мы
+                        разработали так называемый Социальный рейтинг. Это
+                        индикатор, который отражает уровень влияния в социальных
+                        сетях на базе ряда параметров: число «живых»
+                        подписчиков, количество лайков и комментариев и качество
+                        контента. Вы увидите стоимость своего поста
+                        непосредственно перед участием в кампании, и получите
+                        оплату через 24 часа после публикации.
+                    </p>
+                </div>
+            </div>
+            <!--END faq__tab -->
+            <!-- faq__tab -->
+            <div class="faq__tab">
+                <div data-tab-link="3" class="faq__tab__head">
+                    <div class="faq__tab__title">
+                        Как выбрать, что именно рекламировать?
+                    </div>
+                    <div data-tab-arrow="3" class="faq__tab__arrow"></div>
+                </div>
+                <div data-tab-content="3" class="faq__tab__content">
+                    <p>
+                        Чтобы определить размер выплаты каждому пользователю, мы
+                        разработали так называемый Социальный рейтинг. Это
+                        индикатор, который отражает уровень влияния в социальных
+                        сетях на базе ряда параметров: число «живых»
+                        подписчиков, количество лайков и комментариев и качество
+                        контента. Вы увидите стоимость своего поста
+                        непосредственно перед участием в кампании, и получите
+                        оплату через 24 часа после публикации.
+                    </p>
+                </div>
+            </div>
+            <!--END faq__tab -->
+            <!-- faq__tab -->
+            <div class="faq__tab">
+                <div data-tab-link="4" class="faq__tab__head">
+                    <div class="faq__tab__title">
+                        Как поддержать благотворительность с помощью Twidy?
+                    </div>
+                    <div data-tab-arrow="4" class="faq__tab__arrow"></div>
+                </div>
+                <div data-tab-content="4" class="faq__tab__content">
+                    <p>
+                        Чтобы определить размер выплаты каждому пользователю, мы
+                        разработали так называемый Социальный рейтинг. Это
+                        индикатор, который отражает уровень влияния в социальных
+                        сетях на базе ряда параметров: число «живых»
+                        подписчиков, количество лайков и комментариев и качество
+                        контента. Вы увидите стоимость своего поста
+                        непосредственно перед участием в кампании, и получите
+                        оплату через 24 часа после публикации.
+                    </p>
+                </div>
+            </div>
+            <!--END faq__tab -->
+            <!-- faq__tab -->
+            <div class="faq__tab">
+                <div data-tab-link="5" class="faq__tab__head">
+                    <div class="faq__tab__title">
+                        Как вы оaпределяете стоимость моего поста?
+                    </div>
+                    <div data-tab-arrow="5" class="faq__tab__arrow"></div>
+                </div>
+                <div data-tab-content="5" class="faq__tab__content">
+                    <p>
+                        Чтобы определить размер выплаты каждому пользователю, мы
+                        разработали так называемый Социальный рейтинг. Это
+                        индикатор, который отражает уровень влияния в социальных
+                        сетях на базе ряда параметров: число «живых»
+                        подписчиков, количество лайков и комментариев и качество
+                        контента. Вы увидите стоимость своего поста
+                        непосредственно перед участием в кампании, и получите
+                        оплату через 24 часа после публикации.
+                    </p>
                 </div>
             </div>
             <!--END faq__tab -->
@@ -343,4 +444,82 @@ content %}
     </div>
 </div>
 <!--=================================================END faq ===========================================-->
+<!--================================================= mobile__app ===========================================-->
+<div class="mobile__app">
+    <img class="mobile__app__lines" src="img/mobile__app__lines.svg" alt="" />
+    <div class="container">
+        <img class="mobile__app__img" src="img/mobile__app.png" alt="" />
+        <div class="mobile__app__text">
+            <div class="mobile__app__title">
+                Мобильное приложение <br />
+                <span>всегда под рукой</span>
+            </div>
+            <div class="mobile__app__desc">
+                Скачать с помощью AppStore или PlayMarket
+            </div>
+            <a href="" class="btn">Скачать</a>
+        </div>
+    </div>
+</div>
+<!--=================================================END mobile__app ===========================================-->
+<!--================================================= footer ===========================================-->
+<div class="footer">
+    <div class="container">
+        <div class="footer__offer">
+            <div class="footer__offer__left">
+                <div class="footer__offer__icon"></div>
+                <div class="footer__offer__title">
+                    Начните зарабатывать <br />
+                    прямо сейчас
+                </div>
+            </div>
+            <form action="/" class="form__inline">
+                <input
+                    class="input"
+                    type="text"
+                    placeholder="Ваш номер телефона"
+                />
+                <button class="btn">Присоединиться</button>
+            </form>
+        </div>
+        <!--================================================= separator ===========================================-->
+        <div class="separator violet"></div>
+        <!--=================================================END separator ===========================================-->
+        <div class="footer__center">
+            <ul class="footer__links">
+                <li><a href="/">hello@twidy.ru</a></li>
+                <li><a href="/">www.twidy.ru</a></li>
+                <li><a href="/">О нас</a></li>
+                <li><a href="/">Вакансии</a></li>
+                <li><a href="/">Рекомендации</a></li>
+                <li><a href="/">Как начать работу?</a></li>
+                <li><a href="/">Найди совего кумира</a></li>
+                <li><a href="/">Правила</a></li>
+                <li><a href="/">FAQ</a></li>
+                <li><a href="/">Политика Конфиденциальности</a></li>
+            </ul>
+            <div class="footer__social">
+                <div class="footer__social__title">Мы в социальных сетях:</div>
+                <div class="footer__social__items">
+                    <a href="" class="footer__social__item">
+                        <img src="img/footer__fb.svg" alt="" />
+                    </a>
+                    <a href="" class="footer__social__item">
+                        <img src="img/footer__ig.svg" alt="" />
+                    </a>
+                    <a href="" class="footer__social__item">
+                        <img src="img/footer__tw.svg" alt="" />
+                    </a>
+                </div>
+            </div>
+        </div>
+        <ul class="footer__listcenter">
+            <li>ООО "Твиди"</li>
+            <li>ИНН: 9703007454</li>
+            <li>Россия, г. Москва, Пресненская наб. 12, офис 42</li>
+        </ul>
+        <div class="footer__copyright">© 2019 Twidy. All Rights Reserved</div>
+    </div>
+</div>
+<!--=================================================END footer ===========================================-->
 {% endblock %}
