--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -323,7 +323,7 @@ block content %}
 <!--=================================================END idols ===========================================-->
 
 <!--================================================= faq ===========================================-->
-<div class="faq">
+<div class="faq" id="questions">
     <!--================================================= separator ===========================================-->
     <div class="separator violet"></div>
     <!--=================================================END separator ===========================================-->
@@ -457,7 +457,7 @@ block content %}
             <div class="mobile__app__desc">
                 Скачать с помощью AppStore или PlayMarket
             </div>
-            <a href="" class="btn">Скачать</a>
+            <a href="" class="btn orange">Скачать</a>
         </div>
     </div>
 </div>
