--- a/app/nunjucks/login.html
+++ b/app/nunjucks/login.html
@@ -3,7 +3,7 @@ block content %}
 
 <div class="page registration">
     <div class="container">
-        <h1 class="page__title">Регистрация</h1>
+        <h1 class="page__title">Авторизация</h1>
         <div class="registration__forms">
             <img
                 src="img/triangle_2.svg"
@@ -17,17 +17,16 @@ block content %}
             />
             <div class="registration__form left">
                 <div class="registration__form__title">
-                    С помощью Вашего Email <br />
-                    адреса
+                    Введите ваш email <br />
+                    и пароль
                 </div>
                 <form action="">
-                    <input type="text" class="input" placeholder="Имя" />
                     <input type="text" class="input" placeholder="Email" />
                     <input type="text" class="input" placeholder="Пароль" />
-                    <div class="politics">
-                        Я согласен с Условиями и Политикой конфиденциальности
-                    </div>
-                    <button class="btn">Зарегистрироваться</button>
+                    <button class="btn">Войти</button>
+                    <a href="registration.html" class="btn white"
+                        >Регистрация</a
+                    >
                 </form>
             </div>
             <div class="registration__form right">
@@ -45,9 +44,6 @@ block content %}
                         <span>Войти через Facebook</span>
                     </a>
                 </div>
-                <a href="login.html" class="registration__form__login"
-                    >У меня уже есть аккаунт</a
-                >
             </div>
         </div>
     </div>
