--- a/app/nunjucks/regulations.html
+++ b/app/nunjucks/regulations.html
@@ -28,7 +28,7 @@ block content %}
                     class="regulations__lines"
                 />
                 <img
-                    src="img/regulations.png"
+                    src="img/regulations.svg"
                     alt=""
                     class="regulations__laptop"
                 />
