--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -52,7 +52,7 @@ block content %}
                 ></div>
                 <div
                     class="how__work__item__img"
-                    style="background-image: url(img/how__work-1.png);"
+                    style="background-image: url(img/how__work-1.svg);"
                 ></div>
                 <div class="how__work__item__text">
                     <div class="how__work__item__title">Общайтесь</div>
@@ -73,7 +73,7 @@ block content %}
                 ></div>
                 <div
                     class="how__work__item__img"
-                    style="background-image: url(img/how__work-2.png);"
+                    style="background-image: url(img/how__work-2.svg);"
                 ></div>
                 <div class="how__work__item__text">
                     <div class="how__work__item__title">Получайте</div>
@@ -93,7 +93,7 @@ block content %}
                 ></div>
                 <div
                     class="how__work__item__img"
-                    style="background-image: url(img/how__work-3.png);"
+                    style="background-image: url(img/how__work-3.svg);"
                 ></div>
                 <div class="how__work__item__text">
                     <div class="how__work__item__title">Зарабатывайте</div>
@@ -116,7 +116,7 @@ block content %}
                 ></div>
                 <div
                     class="how__work__item__img"
-                    style="background-image: url(img/how__work-4.png);"
+                    style="background-image: url(img/how__work-4.svg);"
                 ></div>
                 <div class="how__work__item__text">
                     <div class="how__work__item__title">Делайте мир лучше!</div>
