--- a/app/nunjucks/vacancies.html
+++ b/app/nunjucks/vacancies.html
@@ -31,7 +31,7 @@ block content %}
                     alt=""
                     class="vacansies__lines"
                 />
-                <img src="img/vacancies.png" alt="" />
+                <img src="img/vacancies.svg" alt="" />
             </div>
         </div>
     </div>
